# schedule-optimizer

./: .gitignore  ALGORITHM_RESEARCH.md  PLAN.md  README.md  RESEARCH_NOTES.md  app.py  pyproject.toml  requirements.txt
data/: sample_data.json
src/data/: generator.py  loader.py
src/models/: __init__.py  building.py  course.py  room.py  schedule.py  student_group.py  teacher.py  time_slot.py
src/optimizer/: __init__.py  constraints.py  engine.py  scoring.py
src/ui/: components.py  dashboard_view.py  data_view.py  optimize_view.py  schedule_view.py
tests/: conftest.py  test_constraints.py  test_models.py  test_optimizer.py  test_scoring.py
