[project]
name = "schedule-optimizer"
version = "0.1.0"
description = "University schedule optimizer using CP-SAT with a Streamlit UI"
requires-python = ">=3.12"
dependencies = [
    "ortools>=9.9",
    "streamlit>=1.35",
    "plotly>=5.18",
    "pydantic>=2.5",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
